--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankit Praddhan - IT & Cybersecurity Professional</title>
+    <title>Ankit Pradhan - IT & Cybersecurity Professional</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="nav-brand">Ankit Praddhan</div>
+            <div class="nav-brand">Ankit Pradhan</div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -25,7 +26,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="hero-title">IT Support & Cybersecurity Professional</h1>
-            <p class="hero-subtitle">Protecting digital infrastructure through proactive security monitoring and technical expertise</p>
+            <p class="hero-subtitle">Transitioning into cybersecurity with hands-on experience in ethical hacking, intrusion detection, and cloud/IoT security</p>
             <a href="#contact" class="btn-primary">Get In Touch</a>
         </div>
     </section>
@@ -35,8 +36,8 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I'm an IT and Cybersecurity student graduating in April 2026, passionate about network security and infrastructure protection. With hands-on experience in intrusion detection systems, cloud security tools, and system administration, I bring a proactive approach to identifying and mitigating security threats.</p>
-                <p>Currently seeking IT Support and entry-level cybersecurity positions where I can leverage my technical skills and continuous learning mindset to contribute to organizational security and operational excellence.</p>
+                <p>I'm an IT support professional transitioning into cybersecurity, currently pursuing a Graduate Certificate in Cybersecurity and Threat Management at Seneca College (GPA 4.0, expected April 2026). With hands-on experience in ethical hacking, intrusion detection, and cloud/IoT security, I bring practical knowledge in penetration testing, Suricata/ELK monitoring, and AWS IoT security.</p>
+                <p>My expertise includes working with tools like Metasploit, Nmap, AWS services (WAF, GuardDuty, CloudWatch), and security operations using Suricata IDS, Elasticsearch, and Kibana. I'm passionate about threat detection, vulnerability assessment, and securing digital infrastructure.</p>
             </div>
         </div>
     </section>
@@ -44,42 +45,46 @@
     <!-- Skills Section -->
     <section id="skills" class="section section-gray">
         <div class="container">
-            <h2 class="section-title">Technical Skills</h2>
+            <h2 class="section-title">Core Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Network Security</h3>
+                    <h3>Cybersecurity & Pentesting</h3>
                     <ul>
-                        <li>Intrusion Detection Systems (Suricata)</li>
-                        <li>Traffic Monitoring & Analysis</li>
-                        <li>Network Reconnaissance (nmap)</li>
-                        <li>Security Scanning & Assessment</li>
+                        <li>Nmap, Metasploit, Enum4linux</li>
+                        <li>Nikto, Nessus, OpenVAS</li>
+                        <li>Exploitation & Post-exploitation</li>
+                        <li>Lateral Movement & Log Analysis</li>
+                        <li>OSINT & Vulnerability Assessment</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h3>Systems & Infrastructure</h3>
+                    <h3>Cloud & IoT Security</h3>
                     <ul>
-                        <li>Ubuntu/Linux Administration</li>
-                        <li>Virtual Machine Networking</li>
-                        <li>IT Support & Troubleshooting</li>
-                        <li>System Configuration</li>
+                        <li>AWS IoT Core & Security</li>
+                        <li>AWS WAF & GuardDuty</li>
+                        <li>CloudWatch & VPC Flow Logs</li>
+                        <li>Secure Device-to-Cloud Communication</li>
+                        <li>Raspberry Pi IoT Projects</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h3>Cloud & Security Tools</h3>
+                    <h3>Security Operations</h3>
                     <ul>
-                        <li>AWS CloudWatch</li>
-                        <li>Web Application Firewall (WAF)</li>
-                        <li>Security Monitoring Platforms</li>
-                        <li>Incident Response Tools</li>
+                        <li>Suricata IDS Configuration</li>
+                        <li>Elasticsearch & Kibana Dashboards</li>
+                        <li>Filebeat & Log Monitoring</li>
+                        <li>Threat Detection & Incident Response</li>
+                        <li>Security Report Writing</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h3>Certifications & Training</h3>
+                    <h3>Systems & Tools</h3>
                     <ul>
-                        <li>CompTIA A+ Certified</li>
-                        <li>Cisco IT Essentials</li>
-                        <li>NPower Canada Training</li>
-                        <li>Ongoing Cybersecurity Education</li>
+                        <li>Windows Server & Active Directory</li>
+                        <li>Ubuntu/Linux & Kali Linux</li>
+                        <li>VMware & Virtualization</li>
+                        <li>Wireshark & Network Analysis</li>
+                        <li>Python, Bash, MS Office</li>
                     </ul>
                 </div>
             </div>
@@ -89,74 +94,105 @@
     <!-- Projects Section -->
     <section id="projects" class="section">
         <div class="container">
-            <h2 class="section-title">Featured Projects</h2>
+            <h2 class="section-title">Academic Lab Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Suricata IDS Deployment</h3>
-                    <p>Deployed and configured Suricata Intrusion Detection System on Ubuntu VMs for real-time traffic monitoring and suspicious activity detection. Implemented custom rule sets and analyzed security alerts.</p>
+                    <h3>Ethical Hacking Project (Metasploitable2)</h3>
+                    <p>Identified and exploited multiple network and web application vulnerabilities on Metasploitable2. Used Nmap, Nessus/OpenVAS, and Metasploit for reconnaissance, scanning, exploitation, and post-exploitation (hashdump, screenshots). Produced penetration testing report with impact and mitigation recommendations.</p>
                     <div class="project-tags">
+                        <span class="tag">Metasploit</span>
+                        <span class="tag">Nmap</span>
+                        <span class="tag">Pentesting</span>
+                        <span class="tag">Nessus</span>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>Cloud IoT Security Project</h3>
+                    <p>Built Raspberry Pi temperature sensor integrated with AWS IoT Core using Python. Configured Suricata with Elasticsearch, Kibana, and Filebeat to monitor IoT and network traffic. Analyzed VPC Flow Logs and gained exposure to AWS WAF, GuardDuty, and CloudWatch for cloud workload protection.</p>
+                    <div class="project-tags">
+                        <span class="tag">AWS IoT</span>
                         <span class="tag">Suricata</span>
-                        <span class="tag">Ubuntu</span>
-                        <span class="tag">Network Security</span>
+                        <span class="tag">Elasticsearch</span>
+                        <span class="tag">Raspberry Pi</span>
                     </div>
                 </div>
                 <div class="project-card">
-                    <h3>Virtual Machine Networking</h3>
-                    <p>Designed and implemented secure virtual machine networking infrastructure for cybersecurity lab environment. Configured network segmentation and security policies.</p>
+                    <h3>Network Security AD Lab</h3>
+                    <p>Configured Kali attacker, Windows Server AD, and Windows 10 client in isolated virtual network. Performed scanning, enumeration, and exploitation against domain-joined systems. Executed lateral movement using harvested credentials and SMB shares with full documentation of attack paths and remediation.</p>
                     <div class="project-tags">
-                        <span class="tag">VM Networking</span>
-                        <span class="tag">Infrastructure</span>
-                        <span class="tag">Security</span>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <h3>Security Assessment & Research</h3>
-                    <p>Conducted passive and active reconnaissance exercises using industry-standard tools. Documented findings and remediation strategies following security best practices.</p>
-                    <div class="project-tags">
-                        <span class="tag">nmap</span>
-                        <span class="tag">Reconnaissance</span>
-                        <span class="tag">Assessment</span>
+                        <span class="tag">Active Directory</span>
+                        <span class="tag">Lateral Movement</span>
+                        <span class="tag">Kali Linux</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Experience Section -->
+    <section id="experience" class="section section-gray">
+        <div class="container">
+            <h2 class="section-title">Experience</h2>
+            <div class="experience-item">
+                <div class="experience-header">
+                    <h3>IT - User Service Representative (Part-Time)</h3>
+                    <p class="company">George Brown College Library, Toronto, ON</p>
+                    <p class="duration">September 2023 - Present</p>
+                </div>
+                <ul class="experience-details">
+                    <li>Support 70+ users daily across Windows, macOS, and ChromeOS for login, printing, connectivity, and software issues</li>
+                    <li>Handle Identity Management (IDM) tasks including account verification, temporary passwords, and coordination with ITS</li>
+                    <li>Assist with MFA setup and security-related access issues while maintaining positive user experience</li>
+                    <li>Use Banner, PaperCut, Helix, Waitwell, MS Office, Teams, and Outlook in daily operations</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!-- Certifications Section -->
-    <section id="certifications" class="section section-gray">
+    <section id="certifications" class="section">
         <div class="container">
             <h2 class="section-title">Certifications & Education</h2>
             <div class="cert-list">
+                <div class="cert-item">
+                    <h3>Graduate Certificate - Cybersecurity and Threat Management (GPA 4.0)</h3>
+                    <p>Seneca College, Toronto, ON | Expected April 2026</p>
+                </div>
+                <div class="cert-item">
+                    <h3>AWS Cloud Security Foundation</h3>
+                    <p>AWS | November 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Cyber Security for IT Professionals</h3>
+                    <p>George Brown College | August 2024</p>
+                </div>
                 <div class="cert-item">
                     <h3>CompTIA A+ Certification</h3>
                     <p>NPower Canada | June 2020</p>
                 </div>
                 <div class="cert-item">
-                    <h3>Cisco IT Essentials Certification</h3>
-                    <p>Cisco Networking Academy</p>
+                    <h3>Junior IT Analyst Program</h3>
+                    <p>NPower Canada | September 2020</p>
                 </div>
                 <div class="cert-item">
-                    <h3>IT & Cybersecurity Program</h3>
-                    <p>First Semester | Expected Graduation: April 2026</p>
-                </div>
-                <div class="cert-item">
-                    <h3>Cybersecurity Fundamentals</h3>
-                    <p>Multiple online course completions</p>
+                    <h3>Bachelor's in Computer Science and IT</h3>
+                    <p>Deerwalk Institute of Technology, Kathmandu, Nepal | March 2017</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
+    <section id="contact" class="section section-gray">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <p>I'm actively seeking IT Support and cybersecurity opportunities. Let's connect!</p>
                 <div class="contact-links">
-                    <a href="mailto:ankit@example.com" class="contact-link">📧 ankit@example.com</a>
+                    <a href="mailto:pradhan922@gmail.com" class="contact-link">📧 pradhan922@gmail.com</a>
                     <a href="https://github.com/ankitpraddhan" target="_blank" class="contact-link">💻 GitHub</a>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-link">💼 LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/ankit--pradhan" target="_blank" class="contact-link">💼 LinkedIn</a>
+                    <a href="tel:437-985-5935" class="contact-link">📞 437-985-5935</a>
                 </div>
             </div>
         </div>
@@ -165,7 +201,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Ankit Praddhan. All rights reserved.</p>
+            <p>&copy; 2025 Ankit Pradhan. All rights reserved.</p>
+            <p>100+ hours of hands-on cybersecurity labs • Pentesting • IDS • Cloud/IoT Security</p>
         </div>
     </footer>
 
