Add President's Honour List to Awards & Honours section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@
         </div>
     </section>
 
+    <!-- Awards & Honours Section -->
+    <section id="awards" class="section section-gray">
+        <div class="container">
+            <h2 class="section-title">Awards & Honours</h2>
+            <div class="awards-list">
+                <div class="award-item">
+                    <div class="award-icon">🏆</div>
+                    <h3>President's Honour List</h3>
+                    <p class="award-institution">Seneca College</p>
+                    <p class="award-description">Recognized for academic excellence with a GPA of 4.0 in the Cybersecurity and Threat Management program</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="section section-gray">
         <div class="container">
