Add View Full Report button for Cloud IoT project

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                         <span class="tag">Suricata</span>
                         <span class="tag">Elasticsearch</span>
                         <span class="tag">Raspberry Pi</span>
+                    <a href="Cloud IoT.pdf" class="project-report-link" target="_blank">
+                        <button class="report-button">📄 View Full Report</button>
+                    </a>
                     </div>
                 </div>
                 <div class="project-card">
