Add View Full Report button for Network Security AD Lab

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                         <span class="tag">Lateral Movement</span>
                         <span class="tag">Kali Linux</span>
                     </div>
+                                    <a href="CYT100-FINAL-PROJECT.pdf" class="project-report-link" target="_blank">
+                    <button class="report-button">📄 View Full Report</button>
+                </a>
                 </div>
             </div>
         </div>
