Add View Part A and Part B buttons for Ethical Hacking project

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                         <span class="tag">Pentesting</span>
                         <span class="tag">Nessus</span>
                     </div>
+                                    <div class="project-report-links">
+                    <a href="CTY130-Final-Assignment-GRP-11-Part-A.pdf" class="project-report-link" target="_blank">
+                        <button class="report-button">📄 View Part A</button>
+                    </a>
+                    <a href="CTY130-Final-Assignment-GRP-11-Part-B.pdf" class="project-report-link" target="_blank">
+                        <button class="report-button">📄 View Part B</button>
+                    </a>
+                </div>
                 </div>
                 <div class="project-card">
                     <h3>Cloud IoT Security Project</h3>
