--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                         <span class="tag">Nessus</span>
                     </div>
                                     <div class="project-report-links">
-                    <a href="CTY130-Final%20Assignment-GRP-11-Part%20A.pdf" class="project-report-link" target="_blank">
+                    <a href="CTY130-Final-Part-A.pdf" class="project-report-link" target="_blank">
                         <button class="report-button">📄 View Part A</button>
                     </a>
-                    <a href="CTY130-Final%20Assignment-GRP-11-Part%20B.pdf" class="project-report-link" target="_blank">
+                    <a href="CTY130-FinCTY130-Final-Part-B.pdf" class="project-report-link" target="_blank">
                         <button class="report-button">📄 View Part B</button>
                     </a>
                 </div>
