Update GitHub link to portfolio URL in Contact section

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <p>I'm actively seeking IT Support and cybersecurity opportunities. Let's connect!</p>
                 <div class="contact-links">
                     <a href="mailto:pradhan922@gmail.com" class="contact-link">📧 pradhan922@gmail.com</a>
-                    <a href="https://github.com/ankitpraddhan" target="_blank" class="contact-link">💻 GitHub</a>
+                    <a href="https://ankitpraddhan.github.io/resume-portfolio/" target="_blank" class="contact-link">💻 GitHub</a>
                     <a href="https://www.linkedin.com/in/ankit--pradhan" target="_blank" class="contact-link">💼 LinkedIn</a>
                     <a href="tel:437-985-5935" class="contact-link">📞 437-985-5935</a>
                 </div>
