Add 2025 certifications to portfolio

--- a/index.html
+++ b/index.html
@@ -172,6 +172,22 @@
                     <h3>Graduate Certificate - Cybersecurity and Threat Management (GPA 4.0)</h3>
                     <p>Seneca College, Toronto, ON | Expected April 2026</p>
                 </div>
+                            <div class="cert-item">
+                <h3>LFS101: Introduction to Linux</h3>
+                <p>The Linux Foundation | December 2025</p>
+            </div>
+            <div class="cert-item">
+                <h3>Cybersecurity at Work</h3>
+                <p>LinkedIn | November 2025</p>
+            </div>
+            <div class="cert-item">
+                <h3>Introduction to CIP</h3>
+                <p>OPSWAT | November 2025</p>
+            </div>
+            <div class="cert-item">
+                <h3>Introduction to EASY Framework for Threat Intelligence</h3>
+                <p>AttackIQ | November 2025</p>
+            </div>
                 <div class="cert-item">
                     <h3>AWS Cloud Security Foundation</h3>
                     <p>AWS | November 2025</p>
@@ -180,6 +196,10 @@
                     <h3>Cyber Security for IT Professionals</h3>
                     <p>George Brown College | August 2024</p>
                 </div>
+                            <div class="cert-item">
+                <h3>Introduction to Cybersecurity</h3>
+                <p>Cisco | September 2025</p>
+            </div>
                 <div class="cert-item">
                     <h3>CompTIA A+ Certification</h3>
                     <p>NPower Canada | June 2020</p>
