Separate Education and Certifications sections

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -163,50 +164,18 @@
         </div>
     </section>
 
-    <!-- Certifications Section -->
-    <section id="certifications" class="section">
+        <!-- Education Section -->
+    <section id="education" class="section">
         <div class="container">
-            <h2 class="section-title">Certifications & Education</h2>
+            <h2 class="section-title">Education</h2>
             <div class="cert-list">
                 <div class="cert-item">
                     <h3>Graduate Certificate - Cybersecurity and Threat Management (GPA 4.0)</h3>
                     <p>Seneca College, Toronto, ON | Expected April 2026</p>
                 </div>
-                            <div class="cert-item">
-                <h3>LFS101: Introduction to Linux</h3>
-                <p>The Linux Foundation | December 2025</p>
-            </div>
-            <div class="cert-item">
-                <h3>Cybersecurity at Work</h3>
-                <p>LinkedIn | November 2025</p>
-            </div>
-            <div class="cert-item">
-                <h3>Introduction to CIP</h3>
-                <p>OPSWAT | November 2025</p>
-            </div>
-            <div class="cert-item">
-                <h3>Introduction to EASY Framework for Threat Intelligence</h3>
-                <p>AttackIQ | November 2025</p>
-            </div>
-                <div class="cert-item">
-                    <h3>AWS Cloud Security Foundation</h3>
-                    <p>AWS | November 2025</p>
-                </div>
                 <div class="cert-item">
                     <h3>Cyber Security for IT Professionals</h3>
                     <p>George Brown College | August 2024</p>
-                </div>
-                            <div class="cert-item">
-                <h3>Introduction to Cybersecurity</h3>
-                <p>Cisco | September 2025</p>
-            </div>
-                <div class="cert-item">
-                    <h3>CompTIA A+ Certification</h3>
-                    <p>NPower Canada | June 2020</p>
-                </div>
-                <div class="cert-item">
-                    <h3>Junior IT Analyst Program</h3>
-                    <p>NPower Canada | September 2020</p>
                 </div>
                 <div class="cert-item">
                     <h3>Bachelor's in Computer Science and IT</h3>
@@ -215,6 +184,48 @@
             </div>
         </div>
     </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="section section-gray">
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="cert-list">
+                <div class="cert-item">
+                    <h3>LFS101: Introduction to Linux</h3>
+                    <p>The Linux Foundation | December 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Cybersecurity at Work</h3>
+                    <p>LinkedIn | November 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Introduction to CIP</h3>
+                    <p>OPSWAT | November 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Introduction to EASY Framework for Threat Intelligence</h3>
+                    <p>AttackIQ | November 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>AWS Cloud Security Foundation</h3>
+                    <p>AWS | November 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Introduction to Cybersecurity</h3>
+                    <p>Cisco | September 2025</p>
+                </div>
+                <div class="cert-item">
+                    <h3>CompTIA A+ Certification</h3>
+                    <p>NPower Canada | June 2020</p>
+                </div>
+                <div class="cert-item">
+                    <h3>Junior IT Analyst Program</h3>
+                    <p>NPower Canada | September 2020</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Awards & Honours Section -->
     <section id="awards" class="section section-gray">
