Add Risk Management and Cybersecurity Governance to Core Skills

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                         <li>Exploitation & Post-exploitation</li>
                         <li>Lateral Movement & Log Analysis</li>
                         <li>OSINT & Vulnerability Assessment</li>
+                                            <li>Risk Management</li>
+                    <li>Cybersecurity Governance</li>
                     </ul>
                 </div>
                 <div class="skill-category">
