Add NIST Framework, OPSWAT, and MITRE ATT&CK to Core Skills

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         <li>OSINT & Vulnerability Assessment</li>
                                             <li>Risk Management</li>
                     <li>Cybersecurity Governance</li>
+                                                    <li>NIST Cybersecurity Framework</li>
+                            <li>OPSWAT (Critical Infrastructure Protection)</li>
+                            <li>MITRE ATT&CK Framework</li>
                     </ul>
                 </div>
                 <div class="skill-category">
