Reorganize Core Skills into 5 balanced categories

--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
                         <li>Exploitation & Post-exploitation</li>
                         <li>Lateral Movement & Log Analysis</li>
                         <li>OSINT & Vulnerability Assessment</li>
-                                            <li>Risk Management</li>
-                    <li>Cybersecurity Governance</li>
-                                                    <li>NIST Cybersecurity Framework</li>
-                            <li>OPSWAT (Critical Infrastructure Protection)</li>
-                            <li>MITRE ATT&CK Framework</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -91,6 +86,16 @@
                         <li>VMware & Virtualization</li>
                         <li>Wireshark & Network Analysis</li>
                         <li>Python, Bash, MS Office</li>
+                    </ul>
+                </div>
+                                <div class="skill-category">
+                    <h3>Security Frameworks & Governance</h3>
+                    <ul>
+                        <li>Risk Management</li>
+                        <li>Cybersecurity Governance</li>
+                        <li>NIST Cybersecurity Framework</li>
+                        <li>OPSWAT (Critical Infrastructure Protection)</li>
+                        <li>MITRE ATT&CK Framework</li>
                     </ul>
                 </div>
             </div>
