Fix Part B PDF link typo in Ethical Hacking project

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <a href="CTY130-Final-Part-A.pdf" class="project-report-link" target="_blank">
                         <button class="report-button">📄 View Part A</button>
                     </a>
-                    <a href="CTY130-FinCTY130-Final-Part-B.pdf" class="project-report-link" target="_blank">
+                    <a href="CTY130-Final-Part-B.pdf" class="project-report-link" target="_blank">
                         <button class="report-button">📄 View Part B</button>
                     </a>
                 </div>
