--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
                     <button class="report-button">📄 View Full Report</button>
                 </a>
                 </div>
+                            <div class="project-card">
+                                                <h3>Credit Card Fraud Detection & Analysis</h3>
+                                                <p>Developed and evaluated Random Forest classification model to detect fraudulent credit card transactions using imbalanced dataset (99.8% valid, 0.2% fraud). Performed data preprocessing, feature scaling, and model training. Achieved 100% accuracy with 96% recall on fraud detection in evaluation dataset. Implemented comprehensive analysis including correlation matrices, confusion matrices, and performance metrics (precision, recall, F1-score, ROC-AUC).</p>
+                                                <div class="project-tags">
+                                                                        <span class="tag">Machine Learning</span>
+                                                                        <span class="tag">Random Forest</span>
+                                                                        <span class="tag">Python</span>
+                                                                        <span class="tag">Fraud Detection</span>
+                                                                    </div>
+                                                <a href="CreditCard_FraduDetection.pdf" class="project-report-link" target="_blank">
+                                                                        <button class="report-button">📄 View Full Report</button>
+                                                                    </a>
+                                            </div>
             </div>
         </div>
     </section>
