--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
                         <span class="tag">Suricata</span>
                         <span class="tag">Elasticsearch</span>
                         <span class="tag">Raspberry Pi</span>
-                    <a href="Cloud IoT.pdf" class="project-report-link" target="_blank">
-                        <button class="report-button">📄 View Full Report</button>
-                    </a>
+                                        </div>
+                                    <a href="Cloud IoT.pdf" class="project-report-link" target="_blank">
+                                                            <button class="report-button">📄 View Full Report</button>
+                                                        </a>
                     </div>
                 </div>
                 <div class="project-card">
