--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <h3>Ethical Hacking Project (Metasploitable2)</h3>
+                                    <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=800&h=400&fit=crop" alt="Ethical Hacking Project" class="project-image">
                     <p>Identified and exploited multiple network and web application vulnerabilities on Metasploitable2. Used Nmap, Nessus/OpenVAS, and Metasploit for reconnaissance, scanning, exploitation, and post-exploitation (hashdump, screenshots). Produced penetration testing report with impact and mitigation recommendations.</p>
                     <div class="project-tags">
                         <span class="tag">Metasploit</span>
@@ -125,6 +126,7 @@
                 </div>
                 <div class="project-card">
                     <h3>Cloud IoT Security Project</h3>
+                                    <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=800&h=400&fit=crop" alt="Cloud IoT Security Project" class="project-image">
                     <p>Built Raspberry Pi temperature sensor integrated with AWS IoT Core using Python. Configured Suricata with Elasticsearch, Kibana, and Filebeat to monitor IoT and network traffic. Analyzed VPC Flow Logs and gained exposure to AWS WAF, GuardDuty, and CloudWatch for cloud workload protection.</p>
                     <div class="project-tags">
                         <span class="tag">AWS IoT</span>
@@ -138,6 +140,7 @@
                 </div>
                 <div class="project-card">
                     <h3>Network Security AD Lab</h3>
+                                    <img src="https://images.unsplash.com/photo-1516110833967-0b5716ca1387?w=800&h=400&fit=crop" alt="Network Security AD Lab" class="project-image">
                     <p>Configured Kali attacker, Windows Server AD, and Windows 10 client in isolated virtual network. Performed scanning, enumeration, and exploitation against domain-joined systems. Executed lateral movement using harvested credentials and SMB shares with full documentation of attack paths and remediation.</p>
                     <div class="project-tags">
                         <span class="tag">Active Directory</span>
@@ -150,6 +153,7 @@
                 </div>
                             <div class="project-card">
                                                 <h3>Credit Card Fraud Detection & Analysis</h3>
+                                                <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=800&h=400&fit=crop" alt="Credit Card Fraud Detection Project" class="project-image">
                                                 <p>Developed and evaluated Random Forest classification model to detect fraudulent credit card transactions using imbalanced dataset (99.8% valid, 0.2% fraud). Performed data preprocessing, feature scaling, and model training. Achieved 100% accuracy with 96% recall on fraud detection in evaluation dataset. Implemented comprehensive analysis including correlation matrices, confusion matrices, and performance metrics (precision, recall, F1-score, ROC-AUC).</p>
                                                 <div class="project-tags">
                                                                         <span class="tag">Machine Learning</span>
