Add Ethical.png image to Ethical Hacking Project section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <h3>Ethical Hacking Project (Metasploitable2)</h3>
-                                    <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=800&h=400&fit=crop" alt="Ethical Hacking Project" class="project-image">
+                                    <img src="Ethical.png" altalt="Ethical Hacking Project" class="project-image">
                     <p>Identified and exploited multiple network and web application vulnerabilities on Metasploitable2. Used Nmap, Nessus/OpenVAS, and Metasploit for reconnaissance, scanning, exploitation, and post-exploitation (hashdump, screenshots). Produced penetration testing report with impact and mitigation recommendations.</p>
                     <div class="project-tags">
                         <span class="tag">Metasploit</span>
