Add IOT.jpeg image to Cloud IoT Security Project section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="project-card">
                     <h3>Cloud IoT Security Project</h3>
-                                    <img src="https://images.unsplash.com/1553406830?w=800&h=400&fit=crop" alt="Cloud IoT Security Project" class="project-image">
+                                    <img src="IOT.jpeg" alt="Cloud IoT Seccurity Project" class="project-image">
                     <p>Built Raspberry Pi temperature sensor integrated with AWS IoT Core using Python. Configured Suricata with Elasticsearch, Kibana, and Filebeat to monitor IoT and network traffic. Analyzed VPC Flow Logs and gained exposure to AWS WAF, GuardDuty, and CloudWatch for cloud workload protection.</p>
                     <div class="project-tags">
                         <span class="tag">AWS IoT</span>
