Add Fraud.png and NetworkAD.png images to project sections

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                 </div>
                 <div class="project-card">
                     <h3>Network Security AD Lab</h3>
-                                    <img src="https://images.unsplash.com/photo-1516110833967-0b5716ca1387?w=800&h=400&fit=crop" alt="Network Security AD Lab" class="project-image">
+                                    <img src="NetworkAD.png" alt="Network Security AD Lab" class="project-image">
                     <p>Configured Kali attacker, Windows Server AD, and Windows 10 client in isolated virtual network. Performed scanning, enumeration, and exploitation against domain-joined systems. Executed lateral movement using harvested credentials and SMB shares with full documentation of attack paths and remediation.</p>
                     <div class="project-tags">
                         <span class="tag">Active Directory</span>
-                        <span class="tag">Lateral Movement</span>
+                        <span class="tag">Lateral Movement</class
                         <span class="tag">Kali Linux</span>
                     </div>
                                     <a href="CYT100-FINAL-PROJECT.pdf" class="project-report-link" target="_blank">
@@ -153,7 +153,7 @@
                 </div>
                             <div class="project-card">
                                                 <h3>Credit Card Fraud Detection & Analysis</h3>
-                                                <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=800&h=400&fit=crop" alt="Credit Card Fraud Detection Project" class="project-image">
+                                                <img src=Fraud.png" alt="Credit Card Fraud Detection PrProject" class="project-image">
                                                 <p>Developed and evaluated Random Forest classification model to detect fraudulent credit card transactions using imbalanced dataset (99.8% valid, 0.2% fraud). Performed data preprocessing, feature scaling, and model training. Achieved 100% accuracy with 96% recall on fraud detection in evaluation dataset. Implemented comprehensive analysis including correlation matrices, confusion matrices, and performance metrics (precision, recall, F1-score, ROC-AUC).</p>
                                                 <div class="project-tags">
                                                                         <span class="tag">Machine Learning</span>
