Fix Fraud.png image src - add missing opening quote

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
                             <div class="project-card">
                                                 <h3>Credit Card Fraud Detection & Analysis</h3>
-                                                <img src=Fraud.png" alt="Credit Card Fraud Detection PrProject" class="project-image">
+                                                <img src="Fraud.png" alt="Credit Card Fraud Detection PrProject" class="project-image">
                                                 <p>Developed and evaluated Random Forest classification model to detect fraudulent credit card transactions using imbalanced dataset (99.8% valid, 0.2% fraud). Performed data preprocessing, feature scaling, and model training. Achieved 100% accuracy with 96% recall on fraud detection in evaluation dataset. Implemented comprehensive analysis including correlation matrices, confusion matrices, and performance metrics (precision, recall, F1-score, ROC-AUC).</p>
                                                 <div class="project-tags">
                                                                         <span class="tag">Machine Learning</span>
