Remove (Metasploitable2) from Ethical Hacking Project title

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2 class="section-title">Academic Lab Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Ethical Hacking Project (Metasploitable2)</h3>
+                    <h3>Ethical Hacking Project</h3>
                                     <img src="Ethical.png" altalt="Ethical Hacking Project" class="project-image">
                     <p>Identified and exploited multiple network and web application vulnerabilities on Metasploitable2. Used Nmap, Nessus/OpenVAS, and Metasploit for reconnaissance, scanning, exploitation, and post-exploitation (hashdump, screenshots). Produced penetration testing report with impact and mitigation recommendations.</p>
                     <div class="project-tags">
