Add Resume download section with navigation link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="nav-brand">Ankit Pradhan</div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
+                                <li><a href="#resume">Resume</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -39,6 +40,19 @@
             <div class="about-content">
                 <p>I'm an IT support professional transitioning into cybersecurity, currently pursuing a Graduate Certificate in Cybersecurity and Threat Management at Seneca College (GPA 4.0, expected April 2026). With hands-on experience in ethical hacking, intrusion detection, and cloud/IoT security, I bring practical knowledge in penetration testing, Suricata/ELK monitoring, and AWS IoT security.</p>
                 <p>My expertise includes working with tools like Metasploit, Nmap, AWS services (WAF, GuardDuty, CloudWatch), and security operations using Suricata IDS, Elasticsearch, and Kibana. I'm passionate about threat detection, vulnerability assessment, and securing digital infrastructure.</p>
+            </div>
+        </div>
+    </section>
+
+        <!-- Resume Section -->
+    <section id="resume" class="section section-gray">
+        <div class="container">
+            <h2 class="section-title">Resume</h2>
+            <div class="resume-content">
+                <p>Download my resume to learn more about my skills, experience, and qualifications.</p>
+                <a href="Resume.pdf" class="resume-download-link" download>
+                    <button class="resume-button">📄 Download Resume</button>
+                </a>
             </div>
         </div>
     </section>
