--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="section-title">Resume</h2>
             <div class="resume-content">
                 <p>Download my resume to learn more about my skills, experience, and qualifications.</p>
-                <a href="Resume.pdf" class="resume-download-link" download>
+                <a href="Ankit_Resume_CYT.pdf" class="resume-download-link" download>
                     <button class="resume-button">📄 Download Resume</button>
                 </a>
             </div>
