--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <section id="about" class="section">
         <div class="container">
             <h2 class="section-title">About Me</h2>
+                        <div class="profile-image-container">
+                <img src="Ankit.jpg" alt="Ankit Pradhan - Profile Picture" class="profile-image">
+            </div>
             <div class="about-content">
                 <p>I'm an IT support professional transitioning into cybersecurity, currently pursuing a Graduate Certificate in Cybersecurity and Threat Management at Seneca College (GPA 4.0, expected April 2026). With hands-on experience in ethical hacking, intrusion detection, and cloud/IoT security, I bring practical knowledge in penetration testing, Suricata/ELK monitoring, and AWS IoT security.</p>
                 <p>My expertise includes working with tools like Metasploit, Nmap, AWS services (WAF, GuardDuty, CloudWatch), and security operations using Suricata IDS, Elasticsearch, and Kibana. I'm passionate about threat detection, vulnerability assessment, and securing digital infrastructure.</p>
