Add DevOps experience at Cedar gate Technologies

--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@
                     <li>Use Banner, PaperCut, Helix, Waitwell, MS Office, Teams, and Outlook in daily operations</li>
                 </ul>
             </div>
+
+                        <div class="experience-item">
+                <div class="experience-header">
+                    <h3>DevOps</h3>
+                    <p class="company">Cedar gate Technologies, Kathmandu, Nepal</p>
+                    <p class="duration">May 2018 - Mar 2020</p>
+                </div>
+                <ul class="experience-details">
+                    <li>Lead release management for Cedar gate products, scripting application builds and automating routine operational tasks.</li>
+                    <li>Managed Agile support and sprint work through ticketing platforms (Redmine, Jira) while administering Git branching and tagging for clean version control.</li>
+                    <li>Deployed and maintained application servers and services using Jenkins pipelines and systemctl scripts to improve reliability and reduce manual work.</li>
+                    <li>Implemented ELK and CloudWatch (plus tools like PagerDuty and Nagios) for centralized logging and proactive monitoring of application and server performance.</li>
+                </ul>
+            </div>
         </div>
     </section>
 
