Change resume link to open in new tab instead of download

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <h2 class="section-title">Resume</h2>
             <div class="resume-content">
                 <p>Download my resume to learn more about my skills, experience, and qualifications.</p>
-                <a href="Ankit_Resume_CYT.pdf" class="resume-download-link" download>
-                    <button class="resume-button">📄 Download Resume</button>
+                <a href="Ankit_Resume_CYT.pdf" class="resume-download-link" target="_blank">                    <button class="resume-button">📄 Download Resume</button>
                 </a>
             </div>
         </div>
