Add Security Case Studies section with 5 PDF document links

--- a/index.html
+++ b/index.html
@@ -181,6 +181,25 @@
                                                                     </a>
                                             </div>
                             </div>
+
+                            <h3 class="section-title" style="margin-top: 40px;">Security Case Studies & Written IR / Legal Analysis</h3>
+                            <div class="project-links" style="display: flex; flex-direction: column; gap: 15px; margin-top: 20px;">
+                                                    <a href="MOVEit Supply Chain Data Breach.pdf" class="project-report-link" target="_blank">
+                                                                                <button class="report-button">📄 MOVEit Supply Chain Data Breach</button>
+                                                                            </a>
+                                                    <a href="CYBERSECURITY INCIDENT RESPONSE PLAN.pdf" class="project-report-link" target="_blank">
+                                                                                <button class="report-button">📄 Cybersecurity Incident Response Plan</button>
+                                                                            </a>
+                                                    <a href="X data breach impact analysis.pdf" class="project-report-link" target="_blank">
+                                                                                <button class="report-button">📄 X Data Breach Impact Analysis</button>
+                                                                            </a>
+                                                    <a href="Communications Strategy and Plan.pdf" class="project-report-link" target="_blank">
+                                                                                <button class="report-button">📄 Communications Strategy and Plan</button>
+                                                                            </a>
+                                                    <a href="SolarWinds Cybersecurity Breach Analysis.pdf" class="project-report-link" target="_blank">
+                                                                                <button class="report-button">📄 SolarWinds Cybersecurity Breach Analysis</button>
+                                                                            </a>
+                                                </div>
             </div>
         </div>
     </section>
